--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,27 @@
-<h1>Proyecto de Angular</h1>
+<header>
+  <ul>
+    <li>
+      <a href="/sobre-mi">sobre-mi</a>
+    </li>
+    <li>
+      <a href="/proyectos">Proyectos</a>
+    </li>
+    <li id="logo">
+      <a href="#">CG</a>
+    </li>
+    <li>
+      <a href="/crear-proyecto">sobre-mi</a>
+    </li>
+    <li>
+      <a href="/contact">Contacto</a>
+    </li>
+  </ul>
+</header>
 
-<ul>
-  <li><a href="/sobre-mi">sobre-mi</a></li>
-  <li><a href="/proyectos">Proyectos</a></li>
-  <li><a href="/crear-proyecto">sobre-mi</a></li>
-  <li><a href="/contact">Contacto</a></li>
+<section id="content">
+  <router-outlet></router-outlet>
+</section>
 
-</ul>
-
-<router-outlet></router-outlet>
+<footer>
+  Master en Javascript de Carlos &copy;
+</footer>
