About me and menu bar component are successful

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,19 @@
 <header>
   <ul>
     <li>
-      <a href="/sobre-mi">sobre-mi</a>
+      <a [routerLink]="['/sobre-mi']" [routerLinkActive]="['activated']">sobre-mi</a>
     </li>
     <li>
-      <a href="/proyectos">Proyectos</a>
+      <a [routerLink]="['/proyectos']" [routerLinkActive]="['activated']">Proyectos</a>
     </li>
     <li id="logo">
       <a href="#">CG</a>
     </li>
     <li>
-      <a href="/crear-proyecto">sobre-mi</a>
+      <a [routerLink]="['/crear-proyecto']" [routerLinkActive]="['activated']">Crear-proyecto</a>
     </li>
     <li>
-      <a href="/contact">Contacto</a>
+      <a [routerLink]="['/contacto']" [routerLinkActive]="['activated']">Contacto</a>
     </li>
   </ul>
 </header>
