--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,26 @@
-<p>about works!</p>
+<div id="title">
+    <h1>{{title}}</h1>
+    <h2>{{subtitle}}</h2>
+    <p>{{email}}</p>
+</div>
+
+<article class="about">
+    <h2>Sobre mí</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias, beatae incidunt nisi illo magni libero laborum praesentium necessitatibus, 
+        deserunt nulla ullam tenetur autem eligendi vitae nam rem, quis blanditiis saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias, beatae incidunt nisi illo magni libero laborum praesentium necessitatibus, 
+        deserunt nulla ullam tenetur autem eligendi vitae nam rem, quis blanditiis saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias, beatae incidunt nisi illo magni libero laborum praesentium necessitatibus, 
+        deserunt nulla ullam tenetur autem eligendi vitae nam rem, quis blanditiis saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias, beatae incidunt nisi illo magni libero laborum praesentium necessitatibus, 
+        deserunt nulla ullam tenetur autem eligendi vitae nam rem, quis blanditiis saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Alias, beatae incidunt nisi illo magni libero laborum praesentium necessitatibus, 
+        deserunt nulla ullam tenetur autem eligendi vitae nam rem, quis blanditiis saepe?
+    </p>
+</article>
