--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -46,15 +46,15 @@ header {
 
 header ul {
     display: block;
-    width: 38%;
+    width: 29%;
     height: inherit; /* Inherit means that it is inherited from the parent. */
     margin: 0px auto;
 }
 header ul li {
     display: inline-block;
-    margin: 0px auto;
+    margin: -3px auto 0 auto;
     text-align: center;
-    line-height: 90px;
+    line-height: 88px;
 }
 
 header a {
@@ -66,12 +66,87 @@ header a {
     transition: all 300ms;
 }
 
-header a:hover{
+header a:hover,
+        .activated{
     background-color: rgba(0, 0, 0, 0.8);
 }
 
+/* Logo */
 header #logo a:hover {
     background-color: transparent;
     cursor: default;
 }
 
+#logo {
+    font-family: "finger";
+    font-size: 30px;
+}
+
+#logo a {
+    transition: 500ms all ease;
+}
+
+#logo a:hover {
+    background-color: transparent;
+    color: #000;
+    transform: scale(1.75, 1.75);
+    cursor: default;
+}
+
+/* Principal container */
+#content {
+    width: 75%;
+    margin: 0px auto;
+    box-shadow: 0px 0px 40px #000;
+    background-color: rgba(255, 255, 255, 0.7);
+    min-height: 700px;
+    padding-top: 120px;
+    border-left: 1px solid #b7b7b7;
+    border-right: 1px solid #b7b7b7;
+}
+
+/* Footer */
+footer{
+    width: 75%;
+    margin: 0px auto;
+    padding-top: 15px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+/* About me */
+#title {
+    width: 70%;
+    margin: 0px auto;
+    text-align: center;
+    margin-bottom:70px;
+}
+
+#title h1{
+    font-family: "finger";
+    font-size: 60px;
+    border-bottom: 1px solid #ccc;
+}
+
+#title h2{
+    font-size: 25px;
+    color: #999;
+    margin: 5px 0px;
+}
+
+article.about {
+    width: 70%;
+    margin: 0px auto 20px auto;
+    font-size: 23px;
+}
+
+.about h2 {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+}
+
+.about p {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    text-align: justify;
+}
