--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -3,24 +3,36 @@
     <form #projectForm="ngForm" (ngSubmit)="onSubmit(projectForm)">
         
         <label for="name">Nombre</label>
-        <input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" /><br>
+        <input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" required />
+        <span class="form_error" *ngIf="name.touched && !name.valid">
+            El nombre es obligatorio
+        </span><br>
 
         <label for="description">Descripción</label>
-        <textarea name="description" #description="ngModel" [(ngModel)]="project.description"></textarea><br>
+        <textarea name="description" #description="ngModel" [(ngModel)]="project.description" required></textarea>
+        <span class="form_error" *ngIf="description.touched && !description.valid">
+            La descripción es obligatoria
+        </span><br>
 
         <label for="category">Categoría</label>
-        <input type="text" name="category" #category="ngModel" [(ngModel)]="project.category" /><br>
+        <input type="text" name="category" #category="ngModel" [(ngModel)]="project.category" required />
+        <span class="form_error" *ngIf="category.touched && !category.valid">
+            La categoría es obligatoria
+        </span><br>
 
         <label for="year">Año de lanzamiento</label>
         <input type="number" name="year" #year="ngModel" [(ngModel)]="project.year" /><br>
 
         <label for="langs">Lenguajes utilizados</label>
-        <input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs" /><br>
+        <input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs" required />
+        <span class="form_error" *ngIf="langs.touched && !langs.valid">
+            El lenguaje de programación que usaste es obligatorio
+        </span><br>
 
         <label for="image">Imagen del proyecto</label>
         <input type="file"name="image" placeholder="Subir imagen" /><br>
 
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Enviar" [disabled]="!projectForm.form.valid" />
 
     </form>
 
