--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -99,7 +99,7 @@ header #logo a:hover {
     margin: 0px auto;
     box-shadow: 0px 0px 40px #000;
     background-color: rgba(255, 255, 255, 0.7);
-    min-height: 700px;
+    min-height: 900px;
     padding-top: 120px;
     border-left: 1px solid #b7b7b7;
     border-right: 1px solid #b7b7b7;
@@ -245,4 +245,25 @@ form input[disabled]{
     font-weight: bold;
     letter-spacing: 2px;
     font-style: italic;
+}
+
+/* Project page */
+
+.project {
+    list-style: none;
+    display: block;
+    float: left;
+    width: 25%;
+    text-align: center;
+    margin: 10px 20px;
+}
+
+.project .image {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+}
+
+.project img {
+    width: 100%;
 }
