--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -99,7 +99,8 @@ header #logo a:hover {
     margin: 0px auto;
     box-shadow: 0px 0px 40px #000;
     background-color: rgba(255, 255, 255, 0.7);
-    min-height: 900px;
+    min-height: 850px;
+    height: auto;
     padding-top: 120px;
     border-left: 1px solid #b7b7b7;
     border-right: 1px solid #b7b7b7;
@@ -266,4 +267,9 @@ form input[disabled]{
 
 .project img {
     width: 100%;
+}
+
+.project a {
+    text-decoration: none;
+    color:rgba(16, 67, 133, 1);
 }
