--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -9,9 +9,14 @@
         <p>{{project.category}}</p>
         <p>{{project.langs}}</p>
 
-        <p class="botones">
+        <p class="botones" *ngIf="confirm == false">
             <a [routerLink]="['/editar-proyecto', project._id]" class="button-edit">Editar</a>
-            <a (click)="deleteProject(project._id)" class="button-delete">Borrar</a>
+            <a (click)="setConfirm(true)" class="button-delete">Borrar</a>
+        </p>
+        <p class="botones" *ngIf="confirm == true">
+            <span class="confirm">¿Estas seguro de eliminar este proyecto?</span>
+            <a (click)="setConfirm(false)" class="button-edit">Cancelar</a>
+            <a (click)="deleteProject(project._id)" class="button-delete">Eliminar</a>
         </p>
     </div>
 
